tests/tests/errors/2006-21.vb
'#compiler-options:/keyfile:
'#compiler-message:Command line error BC2006 : option 'keyfile' requires ':<file>'
'#exit-code:1